--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,21 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-coverage = ">=4.5.3"
-pur = ">=5.4.1"
-pytest = ">=5.0.1"
-pylint = ">=2.3.1"
-pytest-cov = ">=2.7.1"
-pytest-flask = ">=1.1.0"
-testing-postgresql = ">=1.3.0"
+coverage = "7.2.1"
+pur = "7.1.0"
+pytest = "7.2.2"
+pylint = "2.17.0"
+pytest-cov = "4.0.0"
+pytest-flask = "1.2.0"
+testing-postgresql = "1.3.0"
 
 [packages]
-aiohttp = ">=3.8.0"
-aiohttp-jinja2 = ">=1.5"
-app-common-python = ">=0.2.5"
-boto3 = ">=1.16.13"
-botocore = ">=1.19.13"
-click = ">=0.7"
+aiohttp = "3.8.4"
+aiohttp-jinja2 = "1.5.1"
+app-common-python = "0.2.5"
+boto3 = "1.26.86"
+botocore = "1.29.86"
+click = "8.1.3"
 connexion = {extras = ["swagger-ui"],version = "==2.14.1"}
 flask = "==2.2.5"
 gitpython = ">=3.1.30"
